--- a/package.json
+++ b/package.json
@@ -4,20 +4,31 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --runInBand"
+    "test": "jest --runInBand",
+    "coverage": "node ./__test__/coverage.ts",
+    "snaptest": "percy exec jest --testPathPattern=./__test__/percy"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@axe-core/puppeteer": "^4.3.2",
     "@types/jest": "^27.0.1",
     "@types/jest-environment-puppeteer": "^4.4.1",
+    "@types/jest-image-snapshot": "^4.3.1",
     "@types/puppeteer": "^5.4.4",
     "jest": "^27.1.0",
+    "jest-image-snapshot": "^4.5.1",
     "jest-puppeteer": "^5.0.4",
     "ndb": "^1.1.5",
     "puppeteer": "^10.2.0",
     "ts-jest": "^27.0.5",
     "typescript": "^4.4.2"
+  },
+  "devDependencies": {
+    "@percy/cli": "^1.0.0-beta.71",
+    "@percy/puppeteer": "^2.0.0",
+    "axe-core": "^4.3.5",
+    "puppeteer-to-istanbul": "^1.4.0"
   }
 }
